# sdkwork-catalog

./: AGENTS.md  Cargo.toml  README.md  package.json
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/app-api/catalog/: catalog-app-api.openapi.json
apps/: README.md
crates/sdkwork-api-catalog-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-catalog-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-catalog-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-catalog-standalone-gateway/: Cargo.toml
crates/sdkwork-api-catalog-standalone-gateway/src/: main.rs
crates/sdkwork-catalog-api-server/: Cargo.toml
crates/sdkwork-catalog-api-server/src/: lib.rs  main.rs
crates/sdkwork-catalog-database-host/: Cargo.toml
crates/sdkwork-catalog-database-host/src/: lib.rs
crates/sdkwork-catalog-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-catalog-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-catalog-repository-sqlx/: Cargo.toml
crates/sdkwork-catalog-repository-sqlx/src/: read_adapter.rs
crates/sdkwork-catalog-service-host/: Cargo.toml
crates/sdkwork-catalog-service-host/src/: lib.rs
crates/sdkwork-catalog-standalone-gateway/: Cargo.toml
crates/sdkwork-catalog-standalone-gateway/src/: main.rs
crates/sdkwork-commerce-catalog-repository-sqlx/: Cargo.toml
crates/sdkwork-commerce-catalog-repository-sqlx/src/: lib.rs  read_adapter.rs
crates/sdkwork-router-catalog-app-api/: Cargo.toml
crates/sdkwork-router-catalog-app-api/src/: app_catalog_router.rs  lib.rs  routes.rs
crates/sdkwork-router-catalog-backend-api/: Cargo.toml
crates/sdkwork-router-catalog-backend-api/src/: lib.rs  routes.rs
crates/sdkwork-routes-catalog-app-api/: Cargo.toml
crates/sdkwork-routes-catalog-app-api/specs/: component.spec.json
crates/sdkwork-routes-catalog-app-api/src/: app_catalog_router.rs  lib.rs  subject.rs
crates/sdkwork-routes-catalog-backend-api/: Cargo.toml
crates/sdkwork-routes-catalog-backend-api/specs/: component.spec.json
crates/sdkwork-routes-catalog-backend-api/src/: lib.rs
database/: README.md  database.manifest.json
database/contract/: schema.yaml  table-registry.json
database/ddl/baseline/sqlite/: 0001_catalog_baseline.sql
database/seeds/: seed.manifest.json
database/seeds/common/: 001_bootstrap.sql
database/seeds/locales/de-DE/: README.md
database/seeds/locales/en-US/: README.md
database/seeds/locales/fr-FR/: README.md
database/seeds/locales/ja-JP/: README.md
database/seeds/locales/ko-KR/: README.md
database/seeds/locales/ru-RU/: README.md
database/seeds/locales/zh-CN/: README.md
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
sdks/sdkwork-catalog-app-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-catalog-app-sdk/openapi/: sdkwork-catalog-app-api.openapi.json
sdks/sdkwork-catalog-app-sdk/sdkwork-catalog-app-sdk-typescript/: package.json
sdks/sdkwork-catalog-app-sdk/specs/: README.md  component.spec.json
specs/: component.spec.json  iam.module.manifest.json
