[package]
name = "sdkwork-api-catalog-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-api-catalog-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_api_catalog_assembly.workspace = true
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_routes_catalog_app_api.workspace = true
sdkwork_catalog_service_host.workspace = true
