[package]
name = "sdkwork-catalog-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "catalog-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork_router_catalog_app_api.workspace = true
sdkwork_router_catalog_backend_api.workspace = true
sdkwork_catalog_service_host.workspace = true
