[package]
name = "sdkwork-catalog-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "catalog-server"
path = "src/main.rs"

[dependencies]
sdkwork_catalog_gateway_assembly = { package = "sdkwork-catalog-gateway-assembly", path = "../sdkwork-catalog-gateway-assembly" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_routes_catalog_app_api.workspace = true
sdkwork_routes_catalog_backend_api.workspace = true
sdkwork_catalog_service_host.workspace = true
