[package]
name = "sdkwork-catalog-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-catalog application HTTP plane."

[lib]
name = "sdkwork_catalog_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_catalog_app_api = { package = "sdkwork-routes-catalog-app-api", path = "../sdkwork-routes-catalog-app-api" }
sdkwork_routes_catalog_backend_api = { package = "sdkwork-routes-catalog-backend-api", path = "../sdkwork-routes-catalog-backend-api" }
