[package]
name = "sdkwork-catalog-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-database-sqlx.workspace = true
sdkwork-database-spi.workspace = true
sdkwork_catalog_database_host.workspace = true
