[package]
name = "sdkwork-commerce-catalog-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_contract_service.workspace = true
sdkwork_commerce_merchandise_repository_sqlx.workspace = true
